deploy: fa76179261cc1d7336ffe77d94982104d1520ae4

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <% end %> -->
   </main>
   <footer>
-    <p>Ce cours est <a href="https:&#x2F;&#x2F;github.com&#x2F;FAIR2Adapt&#x2F;Hack4RiOMAR">modifiable par tous</a>.</p>
-    <p>Il est sous licence GPLv3.0.</p>
+    <p>This website is <a href="https:&#x2F;&#x2F;github.com&#x2F;FAIR2Adapt&#x2F;Hack4RiOMAR">modifiable by everyone</a>.</p>
+    <p>It is distributed under GPLv3.0 License</p>
   </footer>
   <script src="https://fair2adapt.github.io/Hack4RiOMAR/theme.js" integrity="sha384-6r35zGFpokRvH+f/QNl+jia1+5Xqg4mWTiIL43kLNjMv//Po/P7ypL4mD9BqZc9q"></script>
 </body>
