deploy: bd2d0ff82007827a74cf09a9405a25a25d83a21a

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     
     
 
-<p><img src="/logoFAIR2Adapt_with_earth.png" alt="" /></p>
+<p><img src="/logoFAIR2Adapt_with_earth.png" alt="" />
+<img src="/illus.jpg" alt="" /></p>
 <h2 id="data-challenges-for-the-fair2adapt-riomar-case-study">Data challenges for the FAIR2Adapt RiOMar Case study</h2>
 <p>This case study is led by <a href="http://ifremer.fr">IFREMER</a> and builds on the outcomes of the RiOMar Project - Coastal Water Quality Anticipation to manage coastal zone ecosystem responses for biodiversity conservation. The RiOMar project’s data is high-resolution and complex to manipulate. To effectively support climate adaptation strategies and plans, it is crucial to maintain the high-resolution quality while enabling efficient data fusion with diverse datasets.</p>
 <h2 id="about-the-workhathon">About the Workhathon</h2>
