deploy: 0b70ebe4b2fa4c9e7a59366cf8b6b1134a9a9c2b

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
-  <link rel="icon" type="image/svg+xml" href="&#x2F;riomar.png" />
+  <link rel="icon" type="image/svg+xml" href="https:&#x2F;&#x2F;raw.githubusercontent.com&#x2F;FAIR2Adapt&#x2F;Hack4RiOMAR&#x2F;refs&#x2F;heads&#x2F;main&#x2F;static&#x2F;riomar.png" />
   <meta property="og:title" content="Welcome to the RiOMar workhathon ⋅ Hack4RiOMAR" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="fr_FR" />
@@ -43,7 +43,7 @@
 <body>
   <header>
     <h1><a href="/">Hack4RiOMAR</a></h1>
-    <img src="&#x2F;riomar.png" alt="Icon of the RiOMar project" style="border: none; width: 50px;" />
+    <img src="https:&#x2F;&#x2F;raw.githubusercontent.com&#x2F;FAIR2Adapt&#x2F;Hack4RiOMAR&#x2F;refs&#x2F;heads&#x2F;main&#x2F;static&#x2F;riomar.png" alt="Icon of the RiOMar project" style="border: none; width: 50px;" />
   </header>
   
   <main>
