deploy: 4ba88cebf2760170c879e25a526dd67e4f15c075

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 
 <p><img src="https://raw.githubusercontent.com/FAIR2Adapt/Hack4RiOMAR/refs/heads/main/static/logoFAIR2Adapt_with_earth.png" alt="" /></p>
 <h2 id="welcome-to-the-workhathon-earth-africa-bar-chart">Welcome to the Workhathon! 🌍📊</h2>
-<p>We’re excited to have you here for the DGGS for FAIR2Adapt RiOMar Case Study workhathon! Together, we’ll explore high-resolution RiOMar data, dive into DGGS-powered workflows (with xDGGS + Pangeo 🚀), and lay the groundwork for FAIR, scalable solutions supporting climate adaptation.</p>
+<p>We’re excited to have you here for the DGGS for FAIR2Adapt RiOMar Case Study workathon! Together, we’ll explore high-resolution RiOMar data, dive into DGGS-powered workflows (with xDGGS + Pangeo 🚀), and lay the groundwork for FAIR, scalable solutions supporting climate adaptation.</p>
 <p>Let’s collaborate, innovate, and make an impact! 💡🌱</p>
 <h2 id="data-challenges-for-the-fair2adapt-riomar-case-study">Data challenges for the FAIR2Adapt RiOMar Case study</h2>
 <p>This case study is led by <a href="http://ifremer.fr">IFREMER</a> and builds on the outcomes of the RiOMar Project - Coastal Water Quality Anticipation to manage coastal zone ecosystem responses for biodiversity conservation. The RiOMar project’s data is high-resolution and complex to manipulate. To effectively support climate adaptation strategies and plans, it is crucial to maintain the high-resolution quality while enabling efficient data fusion with diverse datasets.</p>
 <h2 id="about-the-workhathon">About the Workhathon</h2>
-<p>We are excited to invite a select group of experts to an exclusive workhathon focused on exploring the integration of Discrete Global Grid Systems (DGGS) into future data workflows for the FAIR2Adapt project, using high-resolution RiOMar data. This event will assess how to develop a preprocessing pipeline for publishing datasets into DGGS grids and evaluate how this approach can streamline data co-location and fusion, providing critical support for climate adaptation strategies.</p>
-<p>This workhathon aims to lay the foundation for future efforts in FAIR2Adapt by:</p>
+<p>We are excited to invite a small group of experts to a workathon focused on exploring the integration of Discrete Global Grid Systems (DGGS) into future data workflows for the FAIR2Adapt project, using high-resolution RiOMar data. This event will assess how to develop a preprocessing pipeline for publishing datasets into DGGS grids and evaluate how this approach can streamline data co-location and fusion, providing critical support for climate adaptation strategies.</p>
+<p>This workathon aims to lay the foundation for future efforts in FAIR2Adapt by:</p>
 <ul>
 <li><strong>Deep Dive into DGGS</strong>: Explore the fundamentals and advantages of DGGS for high-resolution spatial data management, with a focus on leveraging <a href="https://github.com/xarray-contrib/xdggs">xdggs</a> for scalable and efficient analysis.</li>
 <li><strong>Assess RiOMar Data</strong>: Examine the RiOMar datasets and associated metadata to evaluate their readiness for DGGS integration and explore how tools within the Pangeo ecosystem can facilitate data access and preprocessing.</li>
@@ -71,13 +71,13 @@
 <h2 id="event-details">Event Details</h2>
 <ul>
 <li>Dates: 16-19 January 2025</li>
-<li>Location: TBD</li>
-<li>By invitation only. Invitees will receive a detailed agenda and preparation materials.</li>
+<li>Location: Geilo, Norway</li>
+<li>By invitation only, with a maximum capacity of 7 participants. Most participants will be from the FAIR2Adapt project, with a few additional experts in DGGS invited to complement our group. Invitees will receive a detailed agenda and preparation materials.</li>
 </ul>
 <h2 id="advancing-fair-workflows-for-climate-adaptation">Advancing FAIR Workflows for Climate Adaptation</h2>
-<p>This workhathon is a unique opportunity to collaborate with peers and contribute to innovative workflows that empower climate resilience. If you’ve received this invitation, we look forward to your insights and expertise.</p>
+<p>This workathon is a unique opportunity to collaborate with peers and contribute to innovative workflows that empower climate resilience. If you’ve received this invitation, we look forward to your insights and expertise.</p>
 <h2 id="organizers-and-sponsors">Organizers and Sponsors</h2>
-<p>This workhackthon is organised by <a href="https://www.simula.no">Simula Research Laboratory</a> as part of the <a href="http://fair2adapt-eosc.eu">FAIR2Adapt project</a>.</p>
+<p>This workathon is organised by <a href="https://www.simula.no">Simula Research Laboratory</a> as part of the <a href="http://fair2adapt-eosc.eu">FAIR2Adapt project</a>.</p>
 <p>The FAIR2Adapt project has received funding from the European Union’s HORIZON-INFRA-2024-EOSC-01-01 programme under grant agreement No 101188256.</p>
 
 
