--- a/index.html
+++ b/index.html
@@ -77,7 +77,36 @@
 <h2 id="advancing-fair-workflows-for-climate-adaptation">Advancing FAIR Workflows for Climate Adaptation</h2>
 <p>This workathon is a unique opportunity to collaborate with peers and contribute to innovative workflows that empower climate resilience. If you’ve received this invitation, we look forward to your insights and expertise.</p>
 <h2 id="hack4riomar-summary-and-outcomes">Hack4RiOMar summary and outcomes</h2>
-<p><a href="https://fair2adapt.github.io/Hack4RiOMAR/notebooks/index.html">Check the outcomes of the workathon</a></p>
+<p><em>The event was attended in person by six motivated participants, who collaborated to tackle the challenges at hand and advance the FAIR2Adapt RiOMar Case Study. We would like to thank the external experts who joined the hackathon, despite not being part of the FAIR2Adapt project, and attended at their own expense.</em></p>
+<p><strong>Participants</strong> (name, organisation, Github username):</p>
+<ul>
+<li>Even Moa Myklebust, Simula Research Laboratory (Norway), @evenmm </li>
+<li>Tina Odaka, IFREMER (France), @tinaok</li>
+<li>Jean-Marc Delouis, IFREMER (France), @jmdelouis</li>
+<li>Justus Magin, CNRS-LOPS (France), @keewis</li>
+<li>Ola Formo Kihle, Independent Consultant / University of Washington Contractor, (Norway), @ofk123</li>
+<li>Anne Fouilloux, Simula Research Laboratory (Norway), @annefou</li>
+</ul>
+<h3 id="short-summary-of-the-hack4riomar-workathon">short summary of the Hack4RiOMar workathon</h3>
+<ul>
+<li>Successfully aggregated virtual datasets into a single dataset using virtualiZarr, using kerchunk while we still have issues with icechunk.</li>
+<li>Successfully transformed a sample RiOMar dataset into DGSS (Healpix) grid using different resolutions</li>
+<li>Tested the use and potential of multiscale Zarr for DGGS-transformed RiOMar datasets.</li>
+<li>Initiated the process of creating Conda environments on Datarmor, one with cubed and one with dask.</li>
+<li>Tried out transformation of datasets into DGGS (Healpix grid) to test the robustness of our approach:
+<ul>
+<li>Successfully regridded the Argo Kinetic Energy product from Cartesian grid to a discrete global grid system, using xdggs and xarray_healpy.</li>
+<li>Completed regridding and exposed the zarr file for Gebco data, with a notebook for plotting the data.</li>
+</ul>
+</li>
+<li>Created a RO-Crate for RiOMar data to determine if the minimum required metadata is already available.</li>
+</ul>
+<p>We created 20 Jupyter notebooks. Some are still in progress or contain issues we have discovered (e.g., these notebooks did not run successfully). 12 notebooks have successfully run, showcasing and explaining the progress and results of each planned task.</p>
+<ul>
+<li>Github repository with all the notebooks we created: <a href="https://github.com/FAIR2Adapt/Hack4RiOMAR/tree/main/notebooks">https://github.com/FAIR2Adapt/Hack4RiOMAR/tree/main/notebooks</a></li>
+<li><a href="https://fair2adapt.github.io/Hack4RiOMAR/notebooks/index.html">Check the rendered version (Jupyter Book) of the highlight Jupyter notebooks created during the hackathon</a></li>
+</ul>
+<p>Check out our <a href="https://fair2adapt.github.io/Hack4RiOMAR/fair2adapt.github.io/Hack4RiOMAR/">Hack4RiOMar blog</a> to learn more about what we did, our successes and challenges, as well as the next steps we identified!</p>
 <h2 id="organizers-and-sponsors">Organizers and Sponsors</h2>
 <p>This workathon is organised by <a href="https://www.simula.no">Simula Research Laboratory</a> as part of the <a href="http://fair2adapt-eosc.eu">FAIR2Adapt project</a>.</p>
 <p>The FAIR2Adapt project has received funding from the European Union’s HORIZON-INFRA-2024-EOSC-01-01 programme under grant agreement No 101188256.</p>
