deploy: 0f7a6105c4eeb24681037323ff502520dcc64cbd

--- a/workathon/highlights/index.html
+++ b/workathon/highlights/index.html
@@ -154,8 +154,8 @@
 <h3 id="where-to-find-our-work">Where to find our work</h3>
 <ul>
 <li>Github repository with all the notebooks we created: <a href="https://github.com/FAIR2Adapt/Hack4RiOMAR/tree/main/notebooks">https://github.com/FAIR2Adapt/Hack4RiOMAR/tree/main/notebooks</a></li>
-<li><a href="https://fair2adapt.github.io/Hack4RiOMAR/workathon/highlights/notebooks/index.html">The rendered version (Jupyter Book) of the highlight Jupyter notebooks</a></li>
-<li>Check out our <a href="https://fair2adapt.github.io/Hack4RiOMAR/workathon/highlights/fair2adapt.github.io/Hack4RiOMAR/">Hack4RiOMar blog</a> to learn more about what we did, our successes and challenges, as well as the next steps we identified!</li>
+<li><a href="https://fair2adapt.github.io/Hack4RiOMAR/notebooks/index.html">The rendered version (Jupyter Book) of the highlight Jupyter notebooks</a></li>
+<li>Check out our <a href="https://fair2adapt.github.io/Hack4RiOMAR/workathon/blog/">Hack4RiOMar blog</a> to learn more about what we did, our successes and challenges, as well as the next steps we identified!</li>
 </ul>
 
 
