deploy: 2638d6e6a36e5004c8941597b2ac67830d6abca2

--- a/workathon/highlights/index.html
+++ b/workathon/highlights/index.html
@@ -128,7 +128,7 @@
 <li><a href="https://fair2adapt.github.io/Hack4RiOMAR/notebooks/visualize-riomar.html">Visualize RiOMAR dggs-transformed data with xddgs and lonboard</a></li>
 </ul>
 </li>
-<li><strong>Regrid other types of data such as Odysea and/or NorESM and/or GEBCO gridded bathymetry data and/or Argo Kinetic Energy Product to DGGS (Healpix) to assess the robustness of the transformation procedure</strong>: transforming Odysea (Ocean DYnamics and Surface Exchange with the Atmosphere) data is particularly interesting because it originates from remote sensing with satellite tracks, making the data very sparse—a characteristic shared with many other data sources used in the FAIR2Adapt project. NorESM (Norwegian Earth System Modelling) data will be used for another FAIR2Adapt case study. The GEBCO dataset is very popular and would be very useful for the FAIR2Adapt project. Transforming Argo Kinetic Energy Product into DGGS (Healpix) would help to understand if the procedure we have developed is robust. Our goal would be to write a short <em>recipe</em> that could be part of the data publishing pipeline we will develop within the FAIR2Adapt project.
+<li><strong>Regrid other types of data such as NorESM data and/or GEBCO gridded bathymetry data and/or Argo Kinetic Energy Product to DGGS (Healpix) to assess the robustness of the transformation procedure</strong>: NorESM (Norwegian Earth System Modelling) data will be used for another FAIR2Adapt case study. The GEBCO dataset is very popular and would be very useful for the FAIR2Adapt project. Transforming Argo Kinetic Energy Product into DGGS (Healpix) would help to understand if the procedure we have developed is robust. Our goal would be to write a short <em>recipe</em> that could be part of the data publishing pipeline we will develop within the FAIR2Adapt project.
 <ul>
 <li><a href="https://fair2adapt.github.io/Hack4RiOMAR/notebooks/GEBCO_HEALPIX.html">Transform GEBCO Bathymetry data to DGGS</a> and <a href="https://fair2adapt.github.io/Hack4RiOMAR/notebooks/gebco_plots.html">Visualize the DGGS GEBCO Gridded Bathymetry with xdggs</a></li>
 <li><a href="https://fair2adapt.github.io/Hack4RiOMAR/notebooks/pangeo-argo-KE-regridding.html">Transform ARGO-KE products into DGGS (Healpix)</a></li>
@@ -139,7 +139,6 @@
 <li><strong>Apply regridding to DGGS with different resolution to test multilevel (/multiscale) zarr storage format</strong>
 <ul>
 <li><a href="https://fair2adapt.github.io/Hack4RiOMAR/notebooks/riomar_plots-datatree_multiresoplot.html">Multi-resolution RiOMar data</a></li>
-<li><a href="https://github.com/FAIR2Adapt/Hack4RiOMAR/blob/main/notebooks/odyssea_plots-datatree_multiresoplot_works1.ipynb">Multi-resolution Odysea data</a></li>
 </ul>
 </li>
 <li><strong>Parallelize the transformation procedure and test it on the same datasets used in 3.</strong></li>
